src/main/gen/dev/kumachan/intellijkumachan/Parser.java
// This is a generated file. Not intended for manual editing.
package dev.kumachan.intellijkumachan;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static dev.kumachan.intellijkumachan.Types.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class Parser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return root(b, l + 1);
  }

  /* ********************************************************** */
  // node_name arg_mapping_to?
  public static boolean arg_mapping(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_mapping")) return false;
    if (!nextTokenIs(b, TOKEN_NAME)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = node_name(b, l + 1);
    r = r && arg_mapping_1(b, l + 1);
    exit_section_(b, m, ARG_MAPPING, r);
    return r;
  }

  // arg_mapping_to?
  private static boolean arg_mapping_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_mapping_1")) return false;
    arg_mapping_to(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // SYM5800 expr
  public static boolean arg_mapping_to(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_mapping_to")) return false;
    if (!nextTokenIs(b, SYM5800)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SYM5800);
    r = r && expr(b, l + 1);
    exit_section_(b, m, ARG_MAPPING_TO, r);
    return r;
  }

  /* ********************************************************** */
  // binding_plain | binding_cps
  public static boolean binding(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binding")) return false;
    if (!nextTokenIs(b, "<binding>", LET, SYM6400)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINDING, "<binding>");
    r = binding_plain(b, l + 1);
    if (!r) r = binding_cps(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // SYM6400 ref cps_pattern? expr SYM4400
  public static boolean binding_cps(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binding_cps")) return false;
    if (!nextTokenIs(b, SYM6400)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SYM6400);
    r = r && ref(b, l + 1);
    r = r && binding_cps_2(b, l + 1);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, SYM4400);
    exit_section_(b, m, BINDING_CPS, r);
    return r;
  }

  // cps_pattern?
  private static boolean binding_cps_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binding_cps_2")) return false;
    cps_pattern(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // LET pattern SYM6100 expr SYM4400
  public static boolean binding_plain(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "binding_plain")) return false;
    if (!nextTokenIs(b, LET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LET);
    r = r && pattern(b, l + 1);
    r = r && consumeToken(b, SYM6100);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, SYM4400);
    exit_section_(b, m, BINDING_PLAIN, r);
    return r;
  }

  /* ********************************************************** */
  // SYM12300 binding* expr SYM12500
  public static boolean block(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block")) return false;
    if (!nextTokenIs(b, SYM12300)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SYM12300);
    r = r && block_1(b, l + 1);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, SYM12500);
    exit_section_(b, m, BLOCK, r);
    return r;
  }

  // binding*
  private static boolean block_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "block_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!binding(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "block_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // native_body | block
  public static boolean body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "body")) return false;
    if (!nextTokenIs(b, "<body>", NATIVE, SYM12300)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BODY, "<body>");
    r = native_body(b, l + 1);
    if (!r) r = block(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // node_byte+
  public static boolean bytes(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bytes")) return false;
    if (!nextTokenIs(b, BYTE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = node_byte(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!node_byte(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "bytes", c)) break;
    }
    exit_section_(b, m, BYTES, r);
    return r;
  }

  /* ********************************************************** */
  // SYM4000 [ expr { SYM4400 expr }* ] SYM4100
  public static boolean call_ordered(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_ordered")) return false;
    if (!nextTokenIs(b, SYM4000)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SYM4000);
    r = r && call_ordered_1(b, l + 1);
    r = r && consumeToken(b, SYM4100);
    exit_section_(b, m, CALL_ORDERED, r);
    return r;
  }

  // [ expr { SYM4400 expr }* ]
  private static boolean call_ordered_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_ordered_1")) return false;
    call_ordered_1_0(b, l + 1);
    return true;
  }

  // expr { SYM4400 expr }*
  private static boolean call_ordered_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_ordered_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expr(b, l + 1);
    r = r && call_ordered_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // { SYM4400 expr }*
  private static boolean call_ordered_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_ordered_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!call_ordered_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "call_ordered_1_0_1", c)) break;
    }
    return true;
  }

  // SYM4400 expr
  private static boolean call_ordered_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_ordered_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SYM4400);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // SYM12300 [ arg_mapping { SYM4400 arg_mapping }* ] SYM12500
  public static boolean call_unordered(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_unordered")) return false;
    if (!nextTokenIs(b, SYM12300)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SYM12300);
    r = r && call_unordered_1(b, l + 1);
    r = r && consumeToken(b, SYM12500);
    exit_section_(b, m, CALL_UNORDERED, r);
    return r;
  }

  // [ arg_mapping { SYM4400 arg_mapping }* ]
  private static boolean call_unordered_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_unordered_1")) return false;
    call_unordered_1_0(b, l + 1);
    return true;
  }

  // arg_mapping { SYM4400 arg_mapping }*
  private static boolean call_unordered_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_unordered_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = arg_mapping(b, l + 1);
    r = r && call_unordered_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // { SYM4400 arg_mapping }*
  private static boolean call_unordered_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_unordered_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!call_unordered_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "call_unordered_1_0_1", c)) break;
    }
    return true;
  }

  // SYM4400 arg_mapping
  private static boolean call_unordered_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "call_unordered_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SYM4400);
    r = r && arg_mapping(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // node_name { SYM12400 node_name }* pattern? SYM61006200 expr
  public static boolean case_$(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_$")) return false;
    if (!nextTokenIs(b, TOKEN_NAME)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = node_name(b, l + 1);
    r = r && case_1(b, l + 1);
    r = r && case_2(b, l + 1);
    r = r && consumeToken(b, SYM61006200);
    r = r && expr(b, l + 1);
    exit_section_(b, m, CASE, r);
    return r;
  }

  // { SYM12400 node_name }*
  private static boolean case_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!case_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "case_1", c)) break;
    }
    return true;
  }

  // SYM12400 node_name
  private static boolean case_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SYM12400);
    r = r && node_name(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // pattern?
  private static boolean case_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_2")) return false;
    pattern(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // SYM4000 SYM9100 node_type SYM9300 SYM4100
  public static boolean cast(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cast")) return false;
    if (!nextTokenIs(b, SYM4000)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, SYM4000, SYM9100);
    r = r && node_type(b, l + 1);
    r = r && consumeTokens(b, 0, SYM9300, SYM4100);
    exit_section_(b, m, CAST, r);
    return r;
  }

  /* ********************************************************** */
  // cond_pattern? expr
  public static boolean cond(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cond")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COND, "<cond>");
    r = cond_0(b, l + 1);
    r = r && expr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // cond_pattern?
  private static boolean cond_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cond_0")) return false;
    cond_pattern(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // LET pattern SYM6100
  public static boolean cond_pattern(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cond_pattern")) return false;
    if (!nextTokenIs(b, LET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LET);
    r = r && pattern(b, l + 1);
    r = r && consumeToken(b, SYM6100);
    exit_section_(b, m, COND_PATTERN, r);
    return r;
  }

  /* ********************************************************** */
  // pattern SYM6100
  public static boolean cps_pattern(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cps_pattern")) return false;
    if (!nextTokenIs(b, "<cps pattern>", SYM4000, TOKEN_NAME)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CPS_PATTERN, "<cps pattern>");
    r = pattern(b, l + 1);
    r = r && consumeToken(b, SYM6100);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // docs? const node_name node_type body
  public static boolean decl_const(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_const")) return false;
    if (!nextTokenIs(b, "<decl const>", CONST, DOC)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DECL_CONST, "<decl const>");
    r = decl_const_0(b, l + 1);
    r = r && consumeToken(b, CONST);
    r = r && node_name(b, l + 1);
    r = r && node_type(b, l + 1);
    r = r && body(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // docs?
  private static boolean decl_const_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_const_0")) return false;
    docs(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // entry block
  public static boolean decl_entry(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_entry")) return false;
    if (!nextTokenIs(b, ENTRY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ENTRY);
    r = r && block(b, l + 1);
    exit_section_(b, m, DECL_ENTRY, r);
    return r;
  }

  /* ********************************************************** */
  // docs? node_function node_variadic? node_name sig body
  public static boolean decl_func(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_func")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DECL_FUNC, "<decl func>");
    r = decl_func_0(b, l + 1);
    r = r && node_function(b, l + 1);
    r = r && decl_func_2(b, l + 1);
    r = r && node_name(b, l + 1);
    r = r && sig(b, l + 1);
    r = r && body(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // docs?
  private static boolean decl_func_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_func_0")) return false;
    docs(b, l + 1);
    return true;
  }

  // node_variadic?
  private static boolean decl_func_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_func_2")) return false;
    node_variadic(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // docs? method receiver SYM4600 node_name node_type body
  public static boolean decl_method(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_method")) return false;
    if (!nextTokenIs(b, "<decl method>", DOC, METHOD)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DECL_METHOD, "<decl method>");
    r = decl_method_0(b, l + 1);
    r = r && consumeToken(b, METHOD);
    r = r && receiver(b, l + 1);
    r = r && consumeToken(b, SYM4600);
    r = r && node_name(b, l + 1);
    r = r && node_type(b, l + 1);
    r = r && body(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // docs?
  private static boolean decl_method_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_method_0")) return false;
    docs(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // docs? type node_name type_params? impl? type_def
  public static boolean decl_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_type")) return false;
    if (!nextTokenIs(b, "<decl type>", DOC, TYPE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DECL_TYPE, "<decl type>");
    r = decl_type_0(b, l + 1);
    r = r && consumeToken(b, TYPE);
    r = r && node_name(b, l + 1);
    r = r && decl_type_3(b, l + 1);
    r = r && decl_type_4(b, l + 1);
    r = r && type_def(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // docs?
  private static boolean decl_type_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_type_0")) return false;
    docs(b, l + 1);
    return true;
  }

  // type_params?
  private static boolean decl_type_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_type_3")) return false;
    type_params(b, l + 1);
    return true;
  }

  // impl?
  private static boolean decl_type_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_type_4")) return false;
    impl(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // node_doc+
  public static boolean docs(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "docs")) return false;
    if (!nextTokenIs(b, DOC)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = node_doc(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!node_doc(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "docs", c)) break;
    }
    exit_section_(b, m, DOCS, r);
    return r;
  }

  /* ********************************************************** */
  // IF SYM4000 cond { SYM4400 cond }* SYM4100 block
  public static boolean elif(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elif")) return false;
    if (!nextTokenIs(b, IF)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, IF, SYM4000);
    r = r && cond(b, l + 1);
    r = r && elif_3(b, l + 1);
    r = r && consumeToken(b, SYM4100);
    r = r && block(b, l + 1);
    exit_section_(b, m, ELIF, r);
    return r;
  }

  // { SYM4400 cond }*
  private static boolean elif_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elif_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!elif_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "elif_3", c)) break;
    }
    return true;
  }

  // SYM4400 cond
  private static boolean elif_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elif_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SYM4400);
    r = r && cond(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // docs? node_name
  public static boolean enum_item(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_item")) return false;
    if (!nextTokenIs(b, "<enum item>", DOC, TOKEN_NAME)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ENUM_ITEM, "<enum item>");
    r = enum_item_0(b, l + 1);
    r = r && node_name(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // docs?
  private static boolean enum_item_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_item_0")) return false;
    docs(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // cast* term pipe*
  public static boolean expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR, "<expr>");
    r = expr_0(b, l + 1);
    r = r && term(b, l + 1);
    r = r && expr_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // cast*
  private static boolean expr_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!cast(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expr_0", c)) break;
    }
    return true;
  }

  // pipe*
  private static boolean expr_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!pipe(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expr_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // docs? node_name node_type field_default?
  public static boolean field(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field")) return false;
    if (!nextTokenIs(b, "<field>", DOC, TOKEN_NAME)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FIELD, "<field>");
    r = field_0(b, l + 1);
    r = r && node_name(b, l + 1);
    r = r && node_type(b, l + 1);
    r = r && field_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // docs?
  private static boolean field_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field_0")) return false;
    docs(b, l + 1);
    return true;
  }

  // field_default?
  private static boolean field_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field_3")) return false;
    field_default(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // default SYM4000 expr SYM4100
  public static boolean field_default(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field_default")) return false;
    if (!nextTokenIs(b, DEFAULT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DEFAULT, SYM4000);
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, SYM4100);
    exit_section_(b, m, FIELD_DEFAULT, r);
    return r;
  }

  /* ********************************************************** */
  // block
  public static boolean if_no(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "if_no")) return false;
    if (!nextTokenIs(b, SYM12300)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = block(b, l + 1);
    exit_section_(b, m, IF_NO, r);
    return r;
  }

  /* ********************************************************** */
  // block
  public static boolean if_yes(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "if_yes")) return false;
    if (!nextTokenIs(b, SYM12300)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = block(b, l + 1);
    exit_section_(b, m, IF_YES, r);
    return r;
  }

  /* ********************************************************** */
  // SYM4000 [ ref_base { SYM4400 ref_base }* ] SYM4100
  public static boolean impl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "impl")) return false;
    if (!nextTokenIs(b, SYM4000)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SYM4000);
    r = r && impl_1(b, l + 1);
    r = r && consumeToken(b, SYM4100);
    exit_section_(b, m, IMPL, r);
    return r;
  }

  // [ ref_base { SYM4400 ref_base }* ]
  private static boolean impl_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "impl_1")) return false;
    impl_1_0(b, l + 1);
    return true;
  }

  // ref_base { SYM4400 ref_base }*
  private static boolean impl_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "impl_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ref_base(b, l + 1);
    r = r && impl_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // { SYM4400 ref_base }*
  private static boolean impl_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "impl_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!impl_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "impl_1_0_1", c)) break;
    }
    return true;
  }

  // SYM4400 ref_base
  private static boolean impl_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "impl_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SYM4400);
    r = r && ref_base(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // inputs
  public static boolean implicit(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "implicit")) return false;
    if (!nextTokenIs(b, SYM12300)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = inputs(b, l + 1);
    exit_section_(b, m, IMPLICIT, r);
    return r;
  }

  /* ********************************************************** */
  // expr
  public static boolean infix_left(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "infix_left")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, INFIX_LEFT, "<infix left>");
    r = expr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // expr
  public static boolean infix_right(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "infix_right")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, INFIX_RIGHT, "<infix right>");
    r = expr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // SYM4000 infix_left node_operator infix_right SYM4100
  public static boolean infix_term(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "infix_term")) return false;
    if (!nextTokenIs(b, SYM4000)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SYM4000);
    r = r && infix_left(b, l + 1);
    r = r && node_operator(b, l + 1);
    r = r && infix_right(b, l + 1);
    r = r && consumeToken(b, SYM4100);
    exit_section_(b, m, INFIX_TERM, r);
    return r;
  }

  /* ********************************************************** */
  // record_def
  public static boolean inputs(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "inputs")) return false;
    if (!nextTokenIs(b, SYM12300)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = record_def(b, l + 1);
    exit_section_(b, m, INPUTS, r);
    return r;
  }
